--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 PORT=5000
 MONGO_URI=mongodb+srv://vasusharma1768934:Tranquility123@cluster0.u8tungu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=eyeconicwebsite
+GMAIL_USER=vasu.sharma20050@gmail.com
+GMAIL_PASS=tddi getk ppfw pvhv
